<resources>
    <string name="app_name">Yummy Planny</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="sign_up">Sign Up</string>
    <string name="account">Don\'t have an account?</string>
    <string name="or">or</string>
    <string name="google">Continue With Google</string>
    <string name="guest">Continue as a Guest</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">Email</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="welcome_desc">Sign Up Or Login Bellow To Add Meal To Favorites And Sync Your Data</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_account">Already have an account?</string>
    <string name="categories">Categories</string>
    <string name="countries">Countries</string>
    <string name="view_recipe">View Recipe</string>
    <string name="view_recipes">View Recipes</string>
    <string name="meals_of_day">Meals Of The Day</string>
    <string name="suggestions">See Our Suggestions</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="planned">Planned</string>
    <string name="account_menu">Account</string>
    <string name="email_not_correct">Please enter a valid Email</string>
    <string name="valid_password">The password must be at least eight characters, at least one uppercase letter, one lowercase letter and one number:</string>
    <string name="conf_password_not_equal">The confirm password is different from the password</string>
    <string name="video">Video</string>
    <string name="search_meal">Search for a meal</string>
    <string name="search_ing">Search for an ingredient</string>
    <string name="search_cat">Search for a category</string>
    <string name="search_area">Search for a country</string>
    <string name="meal">Meals</string>
    <string name="backup">Backup your data</string>
    <string name="logout">Logout</string>
    <string name="sync">Sync your data</string>
    <string name="reload">Reload</string>
    <string name="no_intrenet">No internet connection</string>
    <string name="cancel">Cancel</string>
    <string name="ask_login">Please Sign in to use this feature</string>
    <string name="ok">OK</string>
    <string name="sign_favorite">Please Sign in to see your Favorites Meals</string>
    <string name="sign_planned">Please Sign in to see your Planned Meals</string>
    <string name="sign_profile">Please Sign in to see your profile</string>

</resources>